[gd_scene load_steps=6 format=3 uid="uid://b70hu7rgwcmqv"]

[ext_resource type="PackedScene" uid="uid://cbyjxn8g2hofm" path="res://maaacks_template/scenes/credits/scrolling_credits.tscn" id="1_sspq7"]
[ext_resource type="Script" uid="uid://dyo7hdwa23t2x" path="res://maaacks_template/scenes/end_credits/end_credits.gd" id="2_5v7ca"]
[ext_resource type="PackedScene" uid="uid://bkcsjsk2ciff" path="res://addons/maaacks_game_template/base/nodes/music_players/background_music_player.tscn" id="3_me3ac"]
[ext_resource type="AudioStream" uid="uid://bjic0cgjoovs0" path="res://sounds/end_credits.ogg" id="4_5v7ca"]
[ext_resource type="Script" uid="uid://1nf36h0gms3q" path="res://addons/maaacks_game_template/base/nodes/utilities/capture_focus.gd" id="4_66fbp"]

[node name="EndCredits" instance=ExtResource("1_sspq7")]
script = ExtResource("2_5v7ca")
main_menu_scene_path = ""
force_mouse_mode_visible = false

[node name="BackgroundMusicPlayer" parent="." index="0" instance=ExtResource("3_me3ac")]
stream = ExtResource("4_5v7ca")

[node name="BackgroundColor" type="ColorRect" parent="." index="1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="BackgroundTextureRect" type="TextureRect" parent="." index="2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="ScrollContainer" parent="." index="3"]
scroll_vertical = 1839

[node name="CreditsLabel" parent="ScrollContainer/VBoxContainer" index="1"]
text = "[font_size=48]Collaborators[/font_size]

[font_size=32]Role[/font_size]
Lucah Lucero
John Nguyen
Carlos Ortiz III 
Tien Phan
Henry Trahan
[url=]Person w/ Link[/url]  

[font_size=48]Sourced[/font_size]
[font_size=32]Asset Type[/font_size]
[font_size=24]Use Case[/font_size]
Author: [url=]Name[/url]  
Source: [url=]Domain : webpage.html[/url]  
License: [url=]License[/url]

[font_size=24]Godot Engine Logo[/font_size]
Author: Andrea Calabr√≥  
Source: [url=https://godotengine.org/press/]godotengine.org : press[/url]  
License: [url=https://github.com/godotengine/godot/blob/master/LOGO_LICENSE.txt]CC BY 4.0 International[/url] 

[font_size=48]Tools[/font_size]
[font_size=24]Godot[/font_size]
[img=80]res:///copied_files_wasnt_paying_attention/assets/godot_engine_logo/logo_vertical_color_dark.png[/img]  
Author: [url=https://godotengine.org/contact]Juan Linietsky, Ariel Manzur, and contributors[/url]  
Source: [url=https://godotengine.org/]godotengine.org[/url]  
License: [url=https://github.com/godotengine/godot/blob/master/LICENSE.txt]MIT License[/url]

[font_size=24]Kenney's  Starter Kit FPS[/font_size]
[img=80]res:///addons/kenney_fps/icon.png[/img]
Author: [url=https://github.com/KenneyNL]Kenney[/url]  
Source: [url=https://github.com/KenneyNL/Starter-Kit-FPS]github: Starter-Kit-FPS[/url]  
License: [url=LICENSE.txt]MIT License[/url] 

[font_size=24]Godot Menus Template[/font_size]
[img=80]res:///copied_files_wasnt_paying_attention/assets/plugin_logo/logo.png[/img]  
Author: [url=https://github.com/Maaack/Godot-Menus-Template/graphs/contributors]Marek Belski and contributors[/url]  
Source: [url=https://github.com/Maaack/Godot-Menus-Template]github: Godot-Menus-Template[/url]  
License: [url=LICENSE.txt]MIT License[/url]  

[font_size=24]Git[/font_size]
[img=80]res:///copied_files_wasnt_paying_attention/assets/git_logo/Git-Logo-2Color.png[/img]  
Author: [url=https://github.com/torvalds]Linus Torvalds[/url]  
Source: [url=https://git-scm.com/downloads]git-scm.com[/url]  
License: [url=https://opensource.org/licenses/GPL-2.0]GNU General Public License version 2[/url]"

[node name="CenterContainer" type="CenterContainer" parent="." index="4"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="EndMessagePanel" type="Panel" parent="CenterContainer" index="0"]
unique_name_in_owner = true
custom_minimum_size = Vector2(360, 120)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/EndMessagePanel" index="0"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ThankPlayer" type="Label" parent="CenterContainer/EndMessagePanel/VBoxContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Thanks for playing!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/EndMessagePanel/VBoxContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/EndMessagePanel/VBoxContainer/CenterContainer" index="0"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 16
script = ExtResource("4_66fbp")

[node name="ExitButton" type="Button" parent="CenterContainer/EndMessagePanel/VBoxContainer/CenterContainer/HBoxContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Exit"

[node name="MenuButton" type="Button" parent="CenterContainer/EndMessagePanel/VBoxContainer/CenterContainer/HBoxContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Menu"

[connection signal="pressed" from="CenterContainer/EndMessagePanel/VBoxContainer/CenterContainer/HBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="CenterContainer/EndMessagePanel/VBoxContainer/CenterContainer/HBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
